--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,18 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.geodevmobile">
+    package="com.example.biketrilhas">
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="geodevmobile"
+        android:label="biketrilhas"
         android:icon="@mipmap/ic_launcher">
-        <meta-data  android:name="com.google.android.geo.API_KEY"
-                    android:value="AIzaSyBtTKYImrgVpXkH61Id3XZ7YC6Js5VgDGc"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -30,5 +26,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAntIVRGjlCV7KDl9LyWyC-9IehpPTIEzM"/>
     </application>
 </manifest>
