--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,11 @@ description: &#x27;A new Flutter project. Created by Slidy&#x27;
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.2.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter_polyline_points: ^0.2.1
+  cached_network_image:
   photo_view: ^0.9.2
   path: 
   path_provider: ^1.6.5
@@ -39,11 +40,17 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
 
 dev_dependencies:
+  flutter_launcher_icons:
   mockito: ^4.1.1
   mobx_codegen: ^1.0.3
   build_runner: ^1.8.1
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "images/icon.png"
 
 
 # For information on the generic Dart part of this file, see the
