--- a/android/.settings/org.eclipse.buildship.core.prefs
+++ b/android/.settings/org.eclipse.buildship.core.prefs
@@ -2,10 +2,10 @@ arguments=
 auto.sync=false
 build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
-connection.project.dir=app
+connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=/usr/lib/jvm/graalvm-ce-java8-19.3.1
+java.home=/usr/lib/jvm/java-11-openjdk-amd64
 jvm.arguments=
 offline.mode=false
 override.workspace.settings=true
