--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,9 +48,9 @@ dev_dependencies:
     sdk: flutter
 
 flutter_icons:
-  android: "launcher_icon"
+  android: true
   ios: true
-  image_path: "images/icon2.png"
+  image_path: "images/res/mipmap-xxxhdpi/launcher_icon.png"
 
 
 # For information on the generic Dart part of this file, see the
@@ -79,12 +79,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Rancho
+      fonts:
+        - asset: fonts/Rancho-Regular.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
