--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,8 @@ dependencies:
   shared_preferences: ^0.5.6+3
   rxdart: ^0.24.0
   dio: ^3.0.9
-  flutter_mobx: ^1.1.0
-  mobx: ^1.1.1
+  flutter_mobx:
+  mobx:
   flutter_modular: ^1.1.2
   flutter:
     sdk: flutter
@@ -42,7 +42,7 @@ dependencies:
 dev_dependencies:
   flutter_launcher_icons:
   mockito: ^4.1.1
-  mobx_codegen: ^1.0.3
+  mobx_codegen: 
   build_runner: ^1.8.1
   flutter_test:
     sdk: flutter
