--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ environment:
 
 dependencies:
   flutter_polyline_points: ^0.2.1
+  json_annotation: ^3.1.0
   cached_network_image:
   photo_view: ^0.9.2
   path: 
@@ -40,6 +41,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
 
 dev_dependencies:
+  json_serializable:
   flutter_launcher_icons:
   mockito: ^4.1.1
   mobx_codegen: 
