--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,4 +30,7 @@
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAntIVRGjlCV7KDl9LyWyC-9IehpPTIEzM"/>
     </application>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 </manifest>
