--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,13 +11,14 @@ description: &#x27;A new Flutter project. Created by Slidy&#x27;
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.1.4
+version: 0.1.6
 
 environment:
   sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter_polyline_points: ^0.2.1
+  url_launcher:
   json_annotation: ^3.1.0
   cached_network_image:
   photo_view: ^0.9.2
