--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="Biketrilhas"
         android:icon="@mipmap/ic_launcher"
+        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round">
         <activity
             android:name=".MainActivity"
