--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,6 @@ environment:
   sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
-  background_location:
   location: ^4.1.1
   flutter_polyline_points: ^0.2.1
   url_launcher:
@@ -39,6 +38,7 @@ dependencies:
   mobx: ^1.2.1+4
   flutter_modular: ^3.0.1
   connectivity:
+  image_downloader: ^0.20.1
   flutter:
     sdk: flutter
 
