Revert "Merge branch 'requia' into release"
This reverts commit 7f508edd31aa7d56506f749ba39d4891a416af60, reversing
changes made to 4de74e67634fed41d70997d193c07cbfc7f8bf3f.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ environment:
   sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
+  background_location:
   location: ^4.1.1
   flutter_polyline_points: ^0.2.1
   url_launcher:
@@ -38,7 +39,6 @@ dependencies:
   mobx: ^1.2.1+4
   flutter_modular: ^3.0.1
   connectivity:
-  image_downloader: ^0.20.1
   flutter:
     sdk: flutter
 
