--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ environment:
   sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
+  background_location:
   location: ^4.1.1
   flutter_polyline_points: ^0.2.1
   url_launcher:
@@ -27,7 +28,7 @@ dependencies:
   path_provider: ^2.0.1
   camera: ^0.8.0
   google_maps_flutter: ^2.0.1
-  geolocator: ^7.0.1
+  geolocator: ^7.0.3
   google_sign_in: ^5.0.0
   firebase_auth: ^1.0.1
   firebase_core : ^1.0.0
