--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   dio: ^4.0.0-beta7
   flutter_mobx:
   mobx: ^1.2.1+4
-  flutter_modular: ^3.0.1
+  flutter_modular: ^3.2.2+1
   connectivity:
   image_downloader: ^0.20.1
   flutter:
