--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   photo_view: ^0.11.1
   path: 
   path_provider: ^2.0.1
-  camera: ^0.5.8+7
+  camera: 0.5.8+17
   google_maps_flutter: ^2.0.1
   geolocator: ^7.0.3
   google_sign_in: ^5.0.0
