--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.biketrilhas</string>
+	<string>br.udesc.bdes.biketrilhas</string>
 	<key>PROJECT_ID</key>
 	<string>biketrilhas-project</string>
 	<key>STORAGE_BUCKET</key>
