--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ environment:
   sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
-  background_location:
+  #background_location:
   location: ^4.1.1
   flutter_polyline_points: ^0.2.1
   url_launcher:
